# invenio-modular-detail-page

./: .gitignore  AUTHORS.rst  CHANGES.md  LICENSE  Pipfile  README.md  VERSION  babel.ini  pyproject.toml
.github/workflows/: tests.yml.bak
invenio-modular-detail-page/: .editorconfig  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  run-tests.sh  setup.cfg  setup.py
invenio-modular-detail-page/.github/workflows/: pypi-publish.yml
invenio-modular-detail-page/.tx/: config
invenio-modular-detail-page/docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio-modular-detail-page/invenio_modular_detail_page/: __init__.py  config.py  ext.py  views.py  webpack.py
invenio-modular-detail-page/invenio_modular_detail_page/assets/semantic-ui/js/invenio_modular_detail_page/: componentsMap.js  index.js
invenio-modular-detail-page/invenio_modular_detail_page/assets/semantic-ui/js/invenio_modular_detail_page/components/: AIUsageAlert.jsx  Analytics.jsx  Citation.jsx  CommunitiesBanner.jsx  ContentWarning.jsx  Creatibutors.jsx  DraftBackButton.jsx  ExportDropdown.jsx  FileList.jsx  FilePreview.jsx  FlagNewerVersion.jsx  PublishingDetails.jsx  RecordManagementMenu.jsx  RecordTitle.jsx  RecordVersionList.jsx  ShareModal.jsx
invenio-modular-detail-page/invenio_modular_detail_page/assets/semantic-ui/js/invenio_modular_detail_page/sections/: DetailContent.jsx  DetailMainTab.jsx  DetailMainTabs.jsx  DetailMobileActionMenu.jsx  DetailRightSidebar.jsx  DetailSidebarAISection.jsx  DetailSidebarCitationSection.jsx  DetailSidebarContentWarningSection.jsx  DetailSidebarDetailsSection.jsx  DetailSidebarDownloadSection.jsx  DetailSidebarExportSection.jsx  DetailSidebarRightsSection.jsx  DetailSidebarSharingSection.jsx  DetailSidebarVersionsSection.jsx  FilePreviewWrapper.jsx
invenio-modular-detail-page/invenio_modular_detail_page/filters/: previewable_extensions.py
invenio-modular-detail-page/invenio_modular_detail_page/templates/invenio_modular_detail_page/: base.html  detail.html  index.html  meta.html
invenio-modular-detail-page/invenio_modular_detail_page/templates/semantic-ui/invenio_modular_detail_page/: detail.html
invenio-modular-detail-page/tests/: conftest.py  test_invenio_modular_detail_page.py
invenio_modular_detail_page/: __init__.py  config.py  ext.py  webpack.py
invenio_modular_detail_page/assets/semantic-ui/js/invenio_modular_detail_page/: componentsMap.js  index.js  util.js
invenio_modular_detail_page/assets/semantic-ui/js/invenio_modular_detail_page/components/: AIUsageAlert.jsx  AffiliationsAccordion.jsx  Analytics.jsx  BadgesFormatsList.jsx  Citation.jsx  CommunitiesBanner.jsx  Creatibutors.jsx  CreatibutorsHelper.js  Descriptions.jsx  Doi.jsx  DraftBackButton.jsx  EmbargoMessage.jsx  ExportDropdown.jsx  FileList.jsx  FilePreview.jsx  FlagNewerVersion.jsx  Keywords.jsx  PublishingDetails.jsx  RecordManagementMenu.jsx  RecordTitle.jsx  RecordVersionList.jsx  ShareModal.jsx  Subjects.jsx
invenio_modular_detail_page/assets/semantic-ui/js/invenio_modular_detail_page/components/community_management/: CommunitiesManagement.jsx  CommunitiesManagementDropdown.jsx  CommunityCompactItemComputer.js  CommunityCompactItemMobile.js  ManageDefaultBrandingAction.js  PendingCommunitiesModal.jsx  PendingCommunitiesSearch.js  PendingCommunityRequestItem.js  RecordCommunitiesListModal.jsx  RecordCommunitiesSearch.jsx  RecordCommunitiesSearchItem.jsx  RecordCommunitySubmissionModal.jsx  RemoveFromCommunityAction.js
invenio_modular_detail_page/assets/semantic-ui/js/invenio_modular_detail_page/contexts/: DetailContext.js  DetailContextProvider.jsx
invenio_modular_detail_page/assets/semantic-ui/js/invenio_modular_detail_page/sections/: DetailContent.jsx  DetailLeftSidebar.jsx  DetailMainSubjectsSection.jsx  DetailMainTab.jsx  DetailMainTabs.jsx  DetailMobileActionMenu.jsx  DetailRightSidebar.jsx  DetailSidebarAISection.jsx  DetailSidebarCitationSection.jsx  DetailSidebarContentWarningSection.jsx  DetailSidebarDetailsSection.jsx  DetailSidebarDownloadSection.jsx  DetailSidebarExportSection.jsx  DetailSidebarRightsSection.jsx  DetailSidebarSharingSection.jsx  DetailSidebarSubjectsSection.jsx  DetailSidebarVersionsSection.jsx  FilePreviewWrapper.jsx
invenio_modular_detail_page/assets/semantic-ui/translations/invenio_modular_detail_page/: package-lock.json  package.json  translations.pot
invenio_modular_detail_page/assets/semantic-ui/translations/invenio_modular_detail_page/messages/: index.js
invenio_modular_detail_page/assets/semantic-ui/translations/invenio_modular_detail_page/messages/en/: translations.json
invenio_modular_detail_page/filters/: previewable_extensions.py
invenio_modular_detail_page/templates/semantic-ui/invenio_modular_detail_page/: detail.html
tests/: conftest.py  test_invenio_modular_detail_page.py
