# -*- coding: utf-8 -*-
#
# Copyright (C) 2023 MESH Research.
#
# Invenio Modular Detail Page is free software; you can redistribute it
# and/or modify it under the terms of the MIT License; see LICENSE file for
# more details.


[metadata]
name = invenio-modular-detail-page
version = attr: invenio_modular_detail_page.__version__
description = "Invenio extension that adds a modular record detail page"
long_description = file: README.rst, CHANGES.rst
keywords = invenio TODO
license = MIT
author = MESH Research
author_email = scottia4@msu.edu
platforms = any
url = https://github.com/MESH-Research/invenio-modular-detail-page
classifiers =
    Development Status :: 1 - Planning

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    invenio-base>=1.2.5
    invenio-i18n>=1.3.1

[options.extras_require]
tests =
    invenio-app>=1.3.4,<2.0.0
    pytest-invenio>=2.1.0,<3.0.0
    pytest-black>=0.3.0
    sphinx>=4.5.0
# TODO: Check if the module uses search
# elasticsearch7 =
#     invenio-search[elasticsearch7]>=2.1.0,<3.0.0
# opensearch2 =
#     invenio-search[opensearch2]>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.apps =
    invenio_modular_detail_page = invenio_modular_detail_page:InvenioModularDetailPage
# invenio_base.blueprints =
    # invenio_modular_detail_page = invenio_modular_detail_page.views:blueprint
invenio_i18n.translations =
    messages = invenio_modular_detail_page
invenio_assets.webpack =
    knowledge_commons_repository_theme = invenio_modular_detail_page.webpack:theme
# TODO: Edit these entry points to fit your needs.
# invenio_access.actions =
# invenio_admin.actions =
# invenio_assets.bundles =
# invenio_base.api_apps =
# invenio_base.api_blueprints =
# invenio_celery.tasks =
# invenio_db.models =
# invenio_pidstore.minters =
# invenio_records.jsonresolver =

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_modular_detail_page --cov-report=term-missing
testpaths = docs tests invenio_modular_detail_page

[compile_catalog]
directory = invenio_modular_detail_page/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = MESH Research
msgid_bugs_address = scottia4@msu.edu
mapping-file = babel.ini
output-file = invenio_modular_detail_page/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_modular_detail_page/translations/messages.pot
output-dir = invenio_modular_detail_page/translations/

[update_catalog]
input-file = invenio_modular_detail_page/translations/messages.pot
output-dir = invenio_modular_detail_page/translations/
